--- a/app/templates/country.njk
+++ b/app/templates/country.njk
@@ -5,6 +5,8 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "./components/macro.njk" import crumbToken, sideBar %}
+{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
+
 {% block pageTitle %}
   Project location - {{siteTitle}}
 {% endblock %}
@@ -15,12 +17,17 @@
     href: backLink,
 	  attributes: {id: 'linkBack'}
   }) }}
+
+  {% if errorList %}
+    {{govukErrorSummary ({
+    "titleText": "There is a problem",
+    "errorList": errorList
+    }) }}
+  {% endif %}
+
 {% endblock %}
 
-
-
 {% block content %}
-
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
