--- a/app/templates/collaboration.njk
+++ b/app/templates/collaboration.njk
@@ -4,15 +4,26 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "./components/macro.njk" import crumbToken, sideBar %}
+{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
+
 {% block pageTitle %}
   Water supply agreement - {{siteTitle}}
 {% endblock %}
+
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
     href: backLink,
 	  attributes: {id: 'linkBack'}
   }) }}
+
+  {% if errorList %}
+    {{govukErrorSummary ({
+    "titleText": "There is a problem",
+    "errorList": errorList
+    }) }}
+  {% endif %}
+
 {% endblock %}
 
 {% block content %}
