--- a/app/templates/project-items.njk
+++ b/app/templates/project-items.njk
@@ -4,16 +4,27 @@
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "./components/macro.njk" import crumbToken %}
+
 {% block pageTitle %}
   Project items - {{ siteTitle }}
 {% endblock %}
+
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
     href: backLink,
 	  attributes: {id: 'linkBack'}
   }) }}
+
+  {% if errorList %}
+    {{govukErrorSummary ({
+    "titleText": "There is a problem",
+    "errorList": errorList
+    }) }}
+  {% endif %}
+
 {% endblock %}
+
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
