deleted target attribute from link for cookie

--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -48,13 +48,13 @@
   html: '<h2 class="govuk-visually-hidden">Support links</h2>
           <ul class="govuk-footer__inline-list">
             <li class="govuk-footer__inline-list-item">
-              <a class="govuk-footer__link" href="<%= htmlWebpackPlugin.options.metadata.urlPrefix %>/accessibility" target="_blank" rel="noopener noreferrer">
+              <a class="govuk-footer__link" href="<%= htmlWebpackPlugin.options.metadata.urlPrefix %>/accessibility" rel="noopener noreferrer">
                 Accessibility
               </a>
             </li>
 
             <li class="govuk-footer__inline-list-item">
-              <a class="govuk-footer__link" href="<%= htmlWebpackPlugin.options.metadata.urlPrefix %>/cookies" target="_blank" rel="noopener noreferrer">
+              <a class="govuk-footer__link" href="<%= htmlWebpackPlugin.options.metadata.urlPrefix %>/cookies" rel="noopener noreferrer">
                 Cookies
               </a>
             </li>
