--- a/app/templates/cookies/cookie-banner.njk
+++ b/app/templates/cookies/cookie-banner.njk
@@ -52,8 +52,7 @@
           },
           {
             text: "View cookies",
-            href: urlPrefix + "/cookies",
-            attributes: {target: "_blank"}
+            href: urlPrefix + "/cookies"
           }
         ]
       },{
