--- a/app/templates/business-details.njk
+++ b/app/templates/business-details.njk
@@ -4,6 +4,7 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "./components/macro.njk" import crumbToken %}
 
 {% block pageTitle %}
@@ -35,7 +36,7 @@
         {{ govukInput(inputBusinessName) }}
         {{ govukInput(inputNumberEmployees) }}
         {{ govukInput(inputBusinessTurnover) }}
-        {{ govukInput(inputSbi) }}
+        {{ govukRadios(radios) }}
         {{ conditionalButtons(checkDetail,'Back to details') }}
 
       </form>
