Updated layout for template & added session timeout param

--- a/app/templates/start.njk
+++ b/app/templates/start.njk
@@ -48,6 +48,7 @@
         <li>information about the project (for example, irrigated land in hectares)</li>
         <li>an estimated total cost of the items you need</li>
       </ul>
+      <p>If you do not enter any information for more than 30 minutes, your application will time out and you'will have to start again.</p>
       <h2 class="govuk-heading-s">Problems with the service</h2>
       <p>If you have any problems with the service, contact the RPA.</p>
       <p>Telephone: <b>03000 200 301</b></p>
