--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -1,6 +1,7 @@
 {% extends "govuk/template.njk" %}
 {% from "govuk/components/header/macro.njk" import govukHeader %}
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+{% from "../../templates/components/timeout-warning/macro.njk" import govukTimeoutWarning %}
 
 {% set urlPrefix = "<%= htmlWebpackPlugin.options.metadata.urlPrefix %>" %}
 {% set assetPath = urlPrefix + "/assets" %}
@@ -30,6 +31,10 @@
     },
     html: 'This is a new service – your <a class="govuk-link" href=" https://defragroup.eu.qualtrics.com/jfe/form/SV_26sUm6qNA26AoK2" target="_blank" rel="noopener noreferrer">feedback</a> will help us to improve it.'
     }) }}
+  {{govukTimeoutWarning({
+    "modalIdleTime":sessionTimeoutInMin,
+    "modalVisibleTime":10
+  })}}
   </div>
 {% endblock %}
 
@@ -37,6 +42,10 @@
   {% if not cookiesPolicy.confirmed %}
     {% include "cookies/cookie-banner.njk" %}
   {% endif %}
+  {% if cookiesPolicy.analytics %}
+    {% include "tag-manager/body-content.njk" %}
+  {% endif %}
+  
   {% if cookiesPolicy.analytics %}
     {% include "tag-manager/body-content.njk" %}
   {% endif %}
