--- a/app/templates/components/timeout-warning/template.njk
+++ b/app/templates/components/timeout-warning/template.njk
@@ -10,8 +10,8 @@
 
 <dialog class="govuk-timeout-warning dialog" data-module="govuk-timeout-warning"
 id="js-timeout-warning"
-data-minutes-idle-timeout="{{ data['modalIdleTime'] or '0.1'}}"
-data-minutes-modal-visible="{{ data['modalVisibleTime'] or '0.2'}}"
+data-minutes-idle-timeout="{{ params['modalIdleTime'] or '0.1'}}"
+data-minutes-modal-visible="{{ params['modalVisibleTime'] or '0.2'}}"
 data-url-redirect="/timeout"
 role="dialog"
 aria-live="polite"
@@ -27,17 +27,3 @@ aria-describedby="at-timer">
   <button class="govuk-button dialog-button js-dialog-close" data-module="govuk-button">Continue application</button>
   <button class="govuk-button govuk-button--secondary" data-module="govuk-button">Save application</button>
 </dialog>
-
-<p>lorem ipsum flsdkfdskfdlsklfds klfskfdk dflk skfdk fkdlsklsfd  </p>
-<p>lorem ipsum flsdkfdskfdlsklfds klfskfdk dflk skfdk fkdlsklsfd  </p>
-<p>lorem ipsum flsdkfdskfdlsklfds klfskfdk dflk skfdk fkdlsklsfd  </p>
-<p>lorem ipsum flsdkfdskfdlsklfds klfskfdk dflk skfdk fkdlsklsfd  </p>
-<p>lorem ipsum flsdkfdskfdlsklfds klfskfdk dflk skfdk fkdlsklsfd  </p>
-<p>lorem ipsum flsdkfdskfdlsklfds klfskfdk dflk skfdk fkdlsklsfd  </p>
-<p>lorem ipsum flsdkfdskfdlsklfds klfskfdk dflk skfdk fkdlsklsfd  </p>
-<p>lorem ipsum flsdkfdskfdlsklfds klfskfdk dflk skfdk fkdlsklsfd  </p>
-<p>lorem ipsum flsdkfdskfdlsklfds klfskfdk dflk skfdk fkdlsklsfd  </p>
-<p>lorem ipsum flsdkfdskfdlsklfds klfskfdk dflk skfdk fkdlsklsfd  </p>
-<p>lorem ipsum flsdkfdskfdlsklfds klfskfdk dflk skfdk fkdlsklsfd  </p>
-<p>lorem ipsum flsdkfdskfdlsklfds klfskfdk dflk skfdk fkdlsklsfd  </p>
-<p>lorem ipsum flsdkfdskfdlsklfds klfskfdk dflk skfdk fkdlsklsfd  </p>
