--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -5,6 +5,7 @@
 
 {% set urlPrefix = "<%= htmlWebpackPlugin.options.metadata.urlPrefix %>" %}
 {% set assetPath = urlPrefix + "/assets" %}
+{% set timeoutPath = urlPrefix + "/session-timeout" %}
 {% set siteTitle = "Check if you can apply for a Farming Transformation Fund water grant - gov.uk" %}
 {% block pageTitle %}
   {{siteTitle}}
@@ -33,7 +34,8 @@
     }) }}
   {{govukTimeoutWarning({
     "modalIdleTime":sessionTimeoutInMin,
-    "modalVisibleTime":10
+    "modalVisibleTime":10,
+    "redirectUrl":timeoutPath
   })}}
   </div>
 {% endblock %}
