--- a/app/templates/components/timeout-warning/template.njk
+++ b/app/templates/components/timeout-warning/template.njk
@@ -12,18 +12,17 @@
 id="js-timeout-warning"
 data-minutes-idle-timeout="{{ params['modalIdleTime'] or '0.1'}}"
 data-minutes-modal-visible="{{ params['modalVisibleTime'] or '0.2'}}"
-data-url-redirect="/timeout"
+data-url-redirect="{{ params['redirectUrl'] }}"
 role="dialog"
 aria-live="polite"
 aria-labelledby="dialog-title"
 aria-describedby="at-timer">
   <h1 id="dialog-title" class="govuk-heading-l">
     Your application will time out soon
-  </h1>
-  <div class="govuk-body">
+  </h1>  
+   <div class="govuk-body">
     <div class="timer" aria-hidden="true" aria-relevant="additions"></div>
     <div class="at-timer govuk-visually-hidden" role="status" id="at-timer"></div>
   </div>
   <button class="govuk-button dialog-button js-dialog-close" data-module="govuk-button">Continue application</button>
-  <button class="govuk-button govuk-button--secondary" data-module="govuk-button">Save application</button>
 </dialog>
