--- a/app/templates/components/timeout-warning/timed-out.html
+++ b/app/templates/components/timeout-warning/timed-out.html
@@ -10,16 +10,16 @@
   <div class="govuk-grid-column-two-thirds">
 
     <h1 class="govuk-heading-l" role="status">
-      Your application has timed out
+      Your session has ended due to inactivity
     </h1>
 
-    <p role="status">We have reset your application because you did not do anything for 30 minutes. We did this to keep your information secure.</p>
-
+    <p role="status">Your session has ended, because you haven’t done anything for over an hour. </p>
+    <div class="govuk-inset-text">
+      We have deleted all the answers you’ve entered to protect your security
+    </div>
     <p>
-      <a class="govuk-button" draggable="false" href="/" role="button" data-module="govuk-button">Start application again</a>
+      <a class="govuk-button" draggable="false" href="/" role="button" data-module="govuk-button">Start again</a>
     </p>
-    <p>If you don’t want to start again, you can <a href="https://www.gov.uk">return to GOV.UK</a>.</p>
-
   </div>
 </div>
 
