Page title & Accessibility

--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -6,7 +6,7 @@
 {% set urlPrefix = "<%= htmlWebpackPlugin.options.metadata.urlPrefix %>" %}
 {% set assetPath = urlPrefix + "/assets" %}
 {% set timeoutPath = urlPrefix + "/session-timeout" %}
-{% set siteTitle = "Check if you can apply for a Farming Transformation Fund water grant - gov.uk" %}
+{% set siteTitle = "Check if you can apply for a Farming Transformation Fund water grant - GOV.UK" %}
 {% block pageTitle %}
   {{siteTitle}}
 {% endblock %}
