--- a/app/templates/SSSI.njk
+++ b/app/templates/SSSI.njk
@@ -7,7 +7,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  SSSI - {{siteTitle}}
+  Does the project directly impact a Site of Special Scientific Interest? - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
