--- a/app/templates/abstraction-licence.njk
+++ b/app/templates/abstraction-licence.njk
@@ -8,7 +8,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Abstraction licence - {{siteTitle}}
+  Does the project need an abstraction licence or a variation of one? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
