--- a/app/templates/applying.njk
+++ b/app/templates/applying.njk
@@ -7,7 +7,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Who is applying - {{siteTitle}}
+  Who is applying for this grant? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
