--- a/app/templates/collaboration.njk
+++ b/app/templates/collaboration.njk
@@ -7,7 +7,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Water supply agreement - {{siteTitle}}
+  Will water be supplied to other farms? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
