--- a/app/templates/farming-type.njk
+++ b/app/templates/farming-type.njk
@@ -7,7 +7,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Farming type - {{siteTitle}}
+  What crops are you growing? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
