--- a/app/templates/irrigated-crops.njk
+++ b/app/templates/irrigated-crops.njk
@@ -8,7 +8,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Irrigated crops - {{siteTitle}}
+  What main crops will be irrigated? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
