--- a/app/templates/irrigated-land.njk
+++ b/app/templates/irrigated-land.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Irrigated land - {{siteTitle}}
+  Will the area of irrigated land change? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
