--- a/app/templates/irrigation-status.njk
+++ b/app/templates/irrigation-status.njk
@@ -7,7 +7,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Irrigation status - {{siteTitle}}
+  Are you currently irrigating? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
