--- a/app/templates/irrigation-systems.njk
+++ b/app/templates/irrigation-systems.njk
@@ -7,7 +7,7 @@
 {% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons%}
 
 {% block pageTitle %}
-  Irrigation systems - {{siteTitle}}
+  Will your irrigation system change? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
