--- a/app/templates/planning-permission.njk
+++ b/app/templates/planning-permission.njk
@@ -8,7 +8,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Planning permission - {{siteTitle}}
+  Does the project need planning permission? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
