--- a/app/templates/potential-amount.njk
+++ b/app/templates/potential-amount.njk
@@ -7,7 +7,7 @@
 
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% block pageTitle %}
-  Potential funding - {{siteTitle}}
+  Potential grant funding - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
