--- a/app/templates/project-cost.njk
+++ b/app/templates/project-cost.njk
@@ -8,7 +8,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Project cost - {{siteTitle}}
+  What is the estimated cost of the items? - {{siteTitle}}
 {% endblock %}7
 
 {% block beforeContent %}
