--- a/app/templates/project-start.njk
+++ b/app/templates/project-start.njk
@@ -8,7 +8,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Project start - {{siteTitle}}
+  Have you already started work on the project? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
