--- a/app/templates/tenancy.njk
+++ b/app/templates/tenancy.njk
@@ -8,7 +8,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Tenancy - {{siteTitle}}
+  Is the planned project on land the farm business owns? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
