--- a/app/templates/confirm.njk
+++ b/app/templates/confirm.njk
@@ -5,7 +5,7 @@
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  Confirm - {{siteTitle}}
+  Confirm and send - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
