--- a/app/templates/country.njk
+++ b/app/templates/country.njk
@@ -8,7 +8,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Project location - {{siteTitle}}
+  Is the planned project in England? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
