--- a/app/templates/productivity.njk
+++ b/app/templates/productivity.njk
@@ -5,7 +5,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons %}
 {% block pageTitle %}
-  Productivity - {{siteTitle}}
+  How will the project improve productivity? - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
