--- a/app/templates/project-items.njk
+++ b/app/templates/project-items.njk
@@ -6,7 +6,7 @@
 {% from "./components/macro.njk" import crumbToken %}
 
 {% block pageTitle %}
-  Project items - {{ siteTitle }}
+  Which eligible items does your project need? - {{ siteTitle }}
 {% endblock %}
 
 {% block beforeContent %}
