--- a/app/templates/project-summary.njk
+++ b/app/templates/project-summary.njk
@@ -7,7 +7,7 @@
 {% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons %}
 
 {% block pageTitle %}
-  Project summary - {{siteTitle}}
+  What impact will the project have? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
