--- a/app/templates/remaining-costs.njk
+++ b/app/templates/remaining-costs.njk
@@ -8,7 +8,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Remaining costs - {{siteTitle}}
+  Can you pay the remaining costs? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
