Added Error in page title.

--- a/app/templates/SSSI.njk
+++ b/app/templates/SSSI.njk
@@ -7,7 +7,9 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Does the project directly impact a Site of Special Scientific Interest? - {{siteTitle}}
+  {% if errorList %}
+    Error: 
+  {% endif %} Does the project directly impact a Site of Special Scientific Interest? - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
