--- a/app/templates/collaboration.njk
+++ b/app/templates/collaboration.njk
@@ -7,7 +7,9 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Will water be supplied to other farms? - {{siteTitle}}
+  {% if errorList %}
+    Error: 
+  {% endif %} Will water be supplied to other farms? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
