--- a/app/templates/irrigation-systems.njk
+++ b/app/templates/irrigation-systems.njk
@@ -7,7 +7,9 @@
 {% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons%}
 
 {% block pageTitle %}
-  Will your irrigation system change? - {{siteTitle}}
+  {% if errorList %}
+    Error: 
+  {% endif %} Will your irrigation system change? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
