--- a/app/templates/planning-permission.njk
+++ b/app/templates/planning-permission.njk
@@ -8,7 +8,9 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Does the project need planning permission? - {{siteTitle}}
+  {% if errorList %}
+    Error: 
+  {% endif %} Does the project need planning permission? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
