--- a/app/templates/potential-amount.njk
+++ b/app/templates/potential-amount.njk
@@ -7,7 +7,9 @@
 
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% block pageTitle %}
-  Potential grant funding - {{siteTitle}}
+  {% if errorList %}
+    Error: 
+  {% endif %} Potential grant funding - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
