--- a/app/templates/productivity.njk
+++ b/app/templates/productivity.njk
@@ -5,7 +5,9 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons %}
 {% block pageTitle %}
-  How will the project improve productivity? - {{siteTitle}}
+  {% if errorList %}
+    Error: 
+  {% endif %} How will the project improve productivity? - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
