--- a/app/templates/project-items.njk
+++ b/app/templates/project-items.njk
@@ -6,7 +6,9 @@
 {% from "./components/macro.njk" import crumbToken %}
 
 {% block pageTitle %}
-  Which eligible items does your project need? - {{ siteTitle }}
+  {% if errorList %}
+    Error: 
+  {% endif %} Which eligible items does your project need? - {{ siteTitle }}
 {% endblock %}
 
 {% block beforeContent %}
