--- a/app/templates/project-start.njk
+++ b/app/templates/project-start.njk
@@ -8,7 +8,9 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Have you already started work on the project? - {{siteTitle}}
+  {% if errorList %}
+    Error: 
+  {% endif %} Have you already started work on the project? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
