--- a/app/templates/tenancy-length.njk
+++ b/app/templates/tenancy-length.njk
@@ -8,7 +8,9 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Tenancy length - {{siteTitle}}
+  {% if errorList %}
+    Error: 
+  {% endif %} Do you have a tenancy agreement until 2026 or after? - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
