--- a/app/templates/tenancy.njk
+++ b/app/templates/tenancy.njk
@@ -8,7 +8,9 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Is the planned project on land the farm business owns? - {{siteTitle}}
+  {% if errorList %}
+    Error: 
+  {% endif %} Is the planned project on land the farm business owns? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
