Upgraded govuk-frontend

--- a/app/templates/irrigated-land.njk
+++ b/app/templates/irrigated-land.njk
@@ -8,7 +8,7 @@
 {% block pageTitle %}
   {% if errorList %}
     Error: 
-  {% endif %} Will the area of irrigated land change? - {{siteTitle}}
+  {% endif %} {{pageTitle}} - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
