--- a/app/templates/country.njk
+++ b/app/templates/country.njk
@@ -8,7 +8,9 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Project location - {{siteTitle}}
+  {% if errorList %}
+    Error: 
+  {% endif %} Is the planned project in England? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
