--- a/app/templates/legal-status.njk
+++ b/app/templates/legal-status.njk
@@ -7,7 +7,9 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block pageTitle %}
-  Legal status - {{siteTitle}}
+  {% if errorList %}
+    Error: 
+  {% endif %} What is the legal status of the business? - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
