Added fadeIn Animation to show Non JS timeout after 50 mins.

--- a/app/assets/src/application.scss
+++ b/app/assets/src/application.scss
@@ -131,5 +131,5 @@ $govuk-assets-path: "~govuk-frontend/govuk/assets/";
 
 @keyframes fadeIn {
   from { opacity: 0; }
-  to { opacity: 1; }
+  to { opacity: 1; height: 280px;}
 }
