--- a/app/templates/components/timeout-warning/template.njk
+++ b/app/templates/components/timeout-warning/template.njk
@@ -12,7 +12,7 @@
     <p class="govuk-notification-banner__heading">
       Your session will time out soon
     </p>    
-    <p>We will reset your answers if you do not respond in an hour.</p>
+    <p>We will reset your answers if you do not respond in 10 minutes.</p>
     <p>We do this to keep your information secure.</p>
     <form method="GET" action="" autocomplete="off" novalidate="novalidate">
     <button class="govuk-button" type="submit" data-module="govuk-button" id="btnContinueSession">
