--- a/app/assets/src/application.scss
+++ b/app/assets/src/application.scss
@@ -122,3 +122,15 @@ $govuk-assets-path: "~govuk-frontend/govuk/assets/";
     @extend %govuk-section-break--xl;
   }
 }
+.timeoutDiv {
+  opacity: 0;  
+  animation: fadeIn 600s;
+  animation-delay: 3000s;
+  animation-fill-mode: forwards;
+  height: 0px;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; height: 280px;}
+}
