--- a/app/templates/components/timeout-warning/template.njk
+++ b/app/templates/components/timeout-warning/template.njk
@@ -38,5 +38,5 @@ aria-describedby="at-timer">
     <div class="timer" aria-hidden="true" aria-relevant="additions"></div>
     <div class="at-timer govuk-visually-hidden" role="status" id="at-timer"></div>
   </div>
-  <button class="govuk-button dialog-button js-dialog-close" data-module="govuk-button">Continue application</button>
+  <button class="govuk-button dialog-button js-dialog-close" data-module="govuk-button">Continue session</button>
 </dialog>
