--- a/app/templates/confirm.njk
+++ b/app/templates/confirm.njk
@@ -33,7 +33,7 @@
   <div class="govuk-grid-row govuk-body">
     <div class="govuk-grid-column-two-thirds govuk-body">
       <h1 class="govuk-heading-l">Confirm and send</h1>
-      <ul>
+      <ul class="govuk-list">
         <li>I confirm that, to the best of my knowledge, the details I have provided are correct.</li>
         <li>I understand the score was based on the answers I provided.</li>
         <li>I am aware the information I submit will be checked.</li>
