--- a/app/templates/accessibility.njk
+++ b/app/templates/accessibility.njk
@@ -5,15 +5,11 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-l">Accessibility statement</h1>
+      <h1 class="govuk-heading-l">Accessibility statement for Check if you can apply for a Farming Transformation Fund Water Management Grant service </h1>
       <p class="govuk-body">
-        Accessibility statement for Check if you can apply for a Farming Transformation Fund water grant service
-      </p>
-      <p class="govuk-body">
-        This accessibility statement applies to the service Check if you can apply for a Farming Transformation Fund water grant.
-      </p>
-      <p class="govuk-body">
-        This service is run by the Rural Payments Agency (RPA). We want as many people as possible to be able to use this website. For example, that means you should be able to:
+        This accessibility statement applies to the service Check if you can apply for a Farming Transformation Fund Water Management Grant. 
+        <br/><br/>
+        This service is run by the Rural Payments Agency (RPA). We want as many people as possible to be able to use this website. For example, that means you should be able to: 
         <ul class="govuk-list govuk-list--bullet">
           <li> change colours, contrast levels and fonts </li>
           <li> zoom in up to 300% without the text spilling off the screen </li>
@@ -22,23 +18,18 @@
           <li> listen to most of the service using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver) </li>
         </ul> 
       </p>
-      <p class="govuk-body"> We’ve also made the service text as simple as possible to understand.
-      </p>
+      <p class="govuk-body">We’ve also made the service text as simple as possible to understand.</p>
       <p class="govuk-body"> 
         <a class="govuk-link" href="https://mcmw.abilitynet.org.uk/">
           AbilityNet</a> has advice on making your device easier to use if you have a disability.
       </p>
       <h2 class="govuk-heading-m">How accessible this service is</h2>
-      <h2 class="govuk-heading-m">We know some parts of this website are not fully accessible:</h2>
-      <ul class="govuk-list govuk-list--bullet">
-        <li>Pressing Enter when the focus is on a checkbox on some screens might take the user to the next screen instead of selecting the checkbox
-        <li>Title mentioned by the screen reader software is inconsistent with the name of the service
-        <li>Autofill functionality offered by browsers is not  accurately mapped to some fields
-        <li>Screen reader software does not accurately mention the full title of the page and does not accurately interpret the table in scoring summary page
-        <li>The user is not alerted to application timeout limits
-      </ul>
+      <p class="govuk-body"> This service is compliant with the 
+        <a class="govuk-link" href="https://www.w3.org/TR/WCAG21/">
+          Web Content Accessibility Guidelines version 2.1</a> AA standard.
+      </p>
       <h2 class="govuk-heading-m">Feedback and contact information</h2>
-      <p class="govuk-body">If you need information in this service in a different format like accessible PDF, large print, easy read, audio recording or braille:
+      <p class="govuk-body">If you need information in this service in a different format like accessible PDF, large print, easy read, audio recording or braille: 
       </p>
       <ul class="govuk-list govuk-list--bullet">
         <li> email <a class="govuk-link" href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk </a></li>
@@ -73,13 +64,12 @@
       </p>
       <h2 class="govuk-heading-m">Compliance status </h2>
       <p class="govuk-body">
-        This service is partially compliant with the Web <a class="govuk-link" href="https://www.w3.org/TR/WCAG21">Content Accessibility Guidelines version 2.1 </a>AA standard, due to the non-compliances listed.<br/><br/>
-        We intend to fix these problems by as soon as possible.
+        This service is compliant with the <a class="govuk-link" href="https://www.w3.org/TR/WCAG21">Web Content Accessibility Guidelines version 2.1</a> AA standard.
       </p>
       <h2 class="govuk-heading-l">Preparation of this accessibility statement </h2>
       <p class="govuk-body">
-        This statement was prepared on 28 May 2021. It was last reviewed on 28 May 2021.<br/><br/>
-        This service was last tested on 19 May 2021. The test was carried out by Defra’s Digital, Data and Technology Services accessibility team.
+        This statement was prepared on 5 August 2021.<br/><br/>
+        This service was last tested on 4 August 2021. The test was carried out by the Digital Accessibility Centre (DAC).
       </p>
     </div>
   </div>
