--- a/app/templates/potential-amount.njk
+++ b/app/templates/potential-amount.njk
@@ -29,8 +29,7 @@
           <h1 class="govuk-fieldset__heading">Potential grant funding</h1>
         </legend>
         <label class="govuk-label">
-          You may be able to apply for a grant of up to
-          <span class="govuk-!-font-weight-bold">£{{calculatedGrant}}</span>,
+          You may be able to apply for a grant of up to £{{calculatedGrant}},
           based on the estimated cost of £{{projectCost}}.
         </label>
         {{ govukInsetText({
