--- a/app/templates/potential-amount.njk
+++ b/app/templates/potential-amount.njk
@@ -33,7 +33,7 @@
           based on the estimated cost of £{{projectCost}}.
         </label>
         {{ govukInsetText({
-            text: "The project is not guaranteed to receive a grant."
+            text: "There’s no guarantee the project will receive a grant."
            })
         }}
         {{ govukButton({
