FFTF-197, Timeout 20min

--- a/app/templates/score.njk
+++ b/app/templates/score.njk
@@ -34,7 +34,7 @@
                 Strong
               </dt>
               <dd class="govuk-summary-list__value govuk-!-font-size-16">
-                Your project seems like it’s a strong fit with the funding priorities. Based on your answers, a grant application seems likely to be successful. 
+                Based on your answers, a grant application is likely to be successful. 
               </dd>
             </div>
             <div class="govuk-summary-list__row">
@@ -42,7 +42,7 @@
                 Average
               </dt>
               <dd class="govuk-summary-list__value govuk-!-font-size-16">
-              Your project seems like it’s an average fit with the funding priorities.  Based on your answers, a grant application seems like it might be successful. 
+              Based on your answers, a grant application might be successful.
               </dd>
             </div>
             <div class="govuk-summary-list__row">
@@ -50,7 +50,7 @@
                 Weak
               </dt>
               <dd class="scoring-block-value govuk-!-font-size-16">
-                Your project seems like it’s a weak fit with the funding priorities.  Based on your answers, a grant application seems unlikely to be successful.  
+                Based on your answers, a grant application is unlikely to be successful.  
               </dd>
             </div>
           </dl>
