--- a/app/templates/score.njk
+++ b/app/templates/score.njk
@@ -4,7 +4,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  Scoring results - {{siteTitle}}
+  Score results - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
@@ -20,7 +20,7 @@
   <div class="govuk-body">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">Scoring results</h1>
+        <h1 class="govuk-heading-xl">Score results</h1>
         <p class="govuk-!-font-size-24">Based on your answers, your project’s score is:</p>
         <div class="govuk-inset-text">
           <h2 class="govuk-heading-m">{{scoreData.desirability.overallRating.band}}</h2>
@@ -34,7 +34,7 @@
                 Strong
               </dt>
               <dd class="govuk-summary-list__value govuk-!-font-size-16">
-                Your project seems like it’s a strong fit with the funding priorities. Based on your answers, a grant application seems likely to be successful. 
+                Based on your answers, a grant application is likely to be successful. 
               </dd>
             </div>
             <div class="govuk-summary-list__row">
@@ -42,7 +42,7 @@
                 Average
               </dt>
               <dd class="govuk-summary-list__value govuk-!-font-size-16">
-              Your project seems like it’s an average fit with the funding priorities.  Based on your answers, a grant application seems like it might be successful. 
+              Based on your answers, a grant application might be successful.
               </dd>
             </div>
             <div class="govuk-summary-list__row">
@@ -50,7 +50,7 @@
                 Weak
               </dt>
               <dd class="scoring-block-value govuk-!-font-size-16">
-                Your project seems like it’s a weak fit with the funding priorities.  Based on your answers, a grant application seems unlikely to be successful.  
+                Based on your answers, a grant application is unlikely to be successful.  
               </dd>
             </div>
           </dl>
