fix survey link in /confirmation

--- a/app/templates/confirmation.njk
+++ b/app/templates/confirmation.njk
@@ -67,5 +67,5 @@
     </div>
   </div>
 
-  <p class="govuk-body"><a class="govuk-link" href={{ output.surveyLink }} target="_blank" rel="noopener noreferrer">What do you think of this service? (opens in a new tab)</a></p>
+  <p class="govuk-body"><a class="govuk-link" href="{{ output.surveyLink }}" target="_blank" rel="noopener noreferrer">What do you think of this service? (opens in a new tab)</a></p>
 {% endblock %}
