--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -30,7 +30,7 @@
       tag: {
       text: "beta"
     },
-    html: 'This is a new service – your <a class="govuk-link" href="<%= htmlWebpackPlugin.options.metadata.surveyLink %>" target="_blank" rel="noopener noreferrer">feedback</a> will help us to improve it.'
+    html: 'This is a new service – your <a class="govuk-link" href="'+ surveyLink +'" target="_blank" rel="noopener noreferrer">feedback</a> will help us to improve it.'
     }) }}
   </div>
   {% if showTimeout %}  
@@ -68,7 +68,7 @@
               </a>
             </li>
               <li class="govuk-footer__inline-list-item">
-              <a class="govuk-footer__link" href="<%= htmlWebpackPlugin.options.metadata.surveyLink %>" target="_blank" rel="noopener noreferrer">
+              <a class="govuk-footer__link" href="'+ surveyLink +'" target="_blank" rel="noopener noreferrer">
                 Feedback
               </a>
             </li>
