accessibility fully compliant.

--- a/app/templates/accessibility.njk
+++ b/app/templates/accessibility.njk
@@ -64,7 +64,7 @@
       </p>
       <h2 class="govuk-heading-m">Compliance status </h2>
       <p class="govuk-body">
-        This service is compliant with the <a class="govuk-link" href="https://www.w3.org/TR/WCAG21">Web Content Accessibility Guidelines version 2.1</a> AA standard.
+        This website is fully compliant with the <a class="govuk-link" href="https://www.w3.org/TR/WCAG21">Web Content Accessibility Guidelines version 2.1</a> AA standard.
       </p>
       <h2 class="govuk-heading-l">Preparation of this accessibility statement </h2>
       <p class="govuk-body">
