--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -22,7 +22,7 @@
 {% block header %}
   {{ govukHeader({
     homepageUrl: startPageUrl,
-    serviceName: "Check if you can apply for a Farming Transformation Fund water management grant",
+    serviceName: "Check if you can apply for a Water Management Grant",
     serviceUrl: startPageUrl
   }) }}
   <div class="govuk-grid-row govuk-width-container">
