--- a/app/templates/tenancy.njk
+++ b/app/templates/tenancy.njk
@@ -41,6 +41,6 @@
         }) }}
       </form>
     </div>
-    {{ sideBar("Eligibility","The land must be owned or have a tenancy in place until 2027 before starting the project.",[]) }}
+    {{ sideBar("Eligibility","You must own the land or have a tenancy in place for 5 years after the final grant payment.",[]) }}
   </div>
 {% endblock %}
