--- a/app/templates/project-items.njk
+++ b/app/templates/project-items.njk
@@ -30,9 +30,9 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-l">Which eligible items do you need for your project?</h1>
+      <h1 class="govuk-heading-l">What eligible items do you need for your project?</h1>
       <span id="project-items-hint" class="govuk-hint">
-        The minimum grant you can apply for is £35,000 (40% of £87,500).<br/>The maximum grant is £500,000.
+        Select all the items your project needs
       </span>
       <form method="POST" action="{{ formActionPage }}" autocomplete="off" novalidate>
         {{ crumbToken(crumb) }}
