--- a/app/templates/remaining-costs.njk
+++ b/app/templates/remaining-costs.njk
@@ -46,8 +46,13 @@
       sideBar(
         "Eligibility",
         "You cannot use public money (for example grant funding from government or local authorities) towards the project costs.\n\n
-        You can use loans, overdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme.",
-        []
+        You can use:",
+        [
+        "loans",
+        "overdrafts",
+        "the Basic Payment Scheme",
+        "agri-environment schemes such as the Countryside Stewardship Scheme"
+        ]
       )
     }}
   </div>
