--- a/app/templates/potential-amount.njk
+++ b/app/templates/potential-amount.njk
@@ -2,7 +2,7 @@
 
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
-{% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
+{% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 {% from "./components/macro.njk" import crumbToken %}
 
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
@@ -32,9 +32,10 @@
           You may be able to apply for a grant of up to £{{calculatedGrant}},
           based on the estimated cost of £{{projectCost}}.
         </label>
-        {{ govukInsetText({
-            text: "There’s no guarantee the project will receive a grant."
-           })
+        {{ govukWarningText({
+            text: "There’s no guarantee the project will receive a grant.",
+            iconFallbackText: "Warning"
+          })
         }}
         {{ govukButton({
           text: "Continue",
