remove sbi radio

--- a/app/templates/business-details.njk
+++ b/app/templates/business-details.njk
@@ -38,9 +38,8 @@
         {{ govukInput(inputBusinessName) }}
         {{ govukInput(inputNumberEmployees) }}
         {{ govukInput(inputBusinessTurnover) }}
-        {{ govukRadios(radios) }}
+        {{ govukInput(inputSbi) }}
         {{ conditionalButtons(checkDetail,'Back to details') }}
-
       </form>
     </div>
   </div>
