--- a/app/templates/model-farmer-agent-details.njk
+++ b/app/templates/model-farmer-agent-details.njk
@@ -58,6 +58,9 @@
         {{ govukInput(inputTown) }}
         {{ govukSelect(selectCounty) }}
         {{ govukInput(inputPostcode) }}
+        {% if inputProjPostcode %}
+          {{ govukInput(inputProjPostcode) }}
+        {% endif %}
         {{ conditionalButtons(checkDetail, 'Back to details') }}
 
       </form>
